--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,18 @@
     <version>1.0-SNAPSHOT</version>
     <url>http://www.mycompany.com</url>
     <build>
-        <resources/>
+        <sourceDirectory>asdasdas</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>asdasdas</directory>
+                <includes>
+                    <include>**</include>
+                </includes>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -32,5 +43,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <project.cronospass.resource mimetype="folder/src">asdasdas</project.cronospass.resource>
     </properties>
 </project>
