--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,15 @@
                     <exclude>**/*.java</exclude>
                 </excludes>
             </resource>
+            <resource>
+                <directory>czczxc</directory>
+                <includes>
+                    <include>**</include>
+                </includes>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
         </resources>
         <plugins>
             <plugin>
@@ -44,5 +53,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.cronospass.resource mimetype="folder/src">asdasdas</project.cronospass.resource>
+        <project.cronospass.resource mimetype="folder/src">czczxc</project.cronospass.resource>
     </properties>
 </project>
