--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>myapp</artifactId>
     
     <packaging>war</packaging>
-    <name>automatic dependency generation</name>
+    <name>automatic dependency generation adas </name>
     <version>1.0-SNAPSHOT</version>
     <url>http://www.mycompany.com</url>
     <build>
